<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NetEnvelop</string>
    <string name="beta_app_name">NetEnvelop BETA</string>
    <string name="shortcuts_title">NetEnvelop Accounts</string>
    <string name="unread_widget_label">NetEnvelop Unread</string>
    <string name="remote_control_label">NetEnvelop Mail remote control</string>
    <string name="remote_control_desc">Allows this application to control NetEnvelop Mail activities and settings.</string>
    <string name="app_authors">NetEnvelop Developers, The K-9 Dog Walkers, and Google</string>
    <string name="app_copyright_fmt">Copyright 2014-<xliff:g>%s</xliff:g> NetEnvelop Developers. Copyright 2008-<xliff:g>%s</xliff:g> K-9.  Portions Copyright 2008-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="welcome_message_title">Welcome to NetEnvelop</string>
    <string name="accounts_welcome"><![CDATA[
<p>
NetEnvelop is the APP that will protect your privacy in email communication, only sender and recievers can read the content of the email.
</p><p>
NetEnvelop can make the users:
</p>
<ul>
  <li>Easily do secure email communication, making Google/Yahoo/Microsoft or other email providers can only see encryptioned content.</li>
  <li>Read and compose email everywhere via your cell phone</li>
  <li>Protect privacy via protecting the phone. The de-encrypted message can only be read on the NetEnvelop app on this phone. If you lost your phone, please wipe out your phone ASAP.</li>
  <li>Compose long/seriouse email on desktop via browser plugin</li>
  <li>Free for general usage, without advertisement. We only charge for heavy and advanced users.</li>
</ul>
<p>
NetEnvelop app is free and will be open source. But it is protect by patents, if you want to leverage on our service besides the NetEnvelop app, please contact with us.
</p>
<p>
Please submit bug reports, contribute new features and ask questions at
<a href="http://netenvelop.uservoice.com/">http://netenvelop.uservoice.com/</a>.
</p>
    ]]></string>
    <string name="default_signature">-- \nSent from NetEnvelop.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from NetEnvelop Mail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="insufficient_apg_permissions">NetEnvelop is cool.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="status_loading_account_folder">Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">Proc <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">Next poll <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="continue_action">Continue</string>
    <string name="back_action">Back</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="add_attachment_action_image">Add attachment (Image)</string>
    <string name="add_attachment_action_video">Add attachment (Video)</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local messages</string>
    <string name="about_action">About</string>
    <string name="c0124_key_pair_manager">Encryption Management</string>
    <string name="prefs_title">Settings</string>
    <string name="accounts_context_menu_title">Account options</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading">Polling</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="load_more_messages_fmt">Load up
    to <xliff:g id="messages_to_load">%d</xliff:g> more</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="message_compose_to_hint">To</string>
    <string name="message_compose_cc_hint">Cc</string>
    <string name="message_compose_bcc_hint">Bcc</string>
    <string name="message_compose_subject_hint">Subject</string>
    <string name="message_compose_content_hint">Message text</string>
    <string name="message_compose_signature_hint">Signature</string>
    <string name="message_compose_show_quoted_text_action">Quote message</string>
    <string name="message_compose_description_add_to">Add recipient (To)</string>
    <string name="message_compose_description_add_cc">Add recipient (CC)</string>
    <string name="message_compose_description_add_bcc">Add recipient (BCC)</string>
    <string name="message_compose_description_delete_quoted_text">Remove quoted text</string>
    <string name="message_compose_description_edit_quoted_text">Edit quoted text</string>
    <string name="btn_crypto_sign">Sign</string>
    <string name="btn_encrypt">Encrypt</string>
    <string name="c0124_title_accounts_keys_menu_refresh">Refresh</string>
    <string name="c0124_title_accounts_keys_menu_recreate_keys">Recreate Keys</string>
    <string name="not_available_text">N/A</string>
    <string name="c0124_string_accounts_keys">Accounts\' Encryption Key</string>
    <string name="c0124_accounts_keys_overall_text_hints">Click To Refresh this page</string>
    <string name="c0124_accounts_keys_recreate_keys_button_title">Recreate\nKeys</string>
    <string name="c0124_menu_title_accounts_keys_clear_all_keys">Clear All Keys</string>
    <string name="c0124_menu_title_accounts_keys_export_keys">Export Keys</string>
    <string name="c0124_menu_title_accounts_keys_import_keys">Import Keys</string>
    <string name="c0124_string_overall_status_allEmailsAccountsAreReadyForEmail">All Accounts are good for sending and receiving encrypting emails.</string>
</resources>