<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.c0124.k9.c0124.gui.accounts_keys.activity.AccountsKeys"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="1"
                android:id="@+id/c0124_accounts_keys_overall_baner"
                >

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="95dp"
                    android:id="@+id/c0124_accounts_keys_overall_image"
                    android:layout_gravity="center_vertical|left"
                    android:src="@drawable/ok_shield"
                    android:layout_weight="0.11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/c0124_string_overall_status_allEmailsAccountsAreReadyForEmail"
                    android:id="@+id/c0124_accounts_keys_overall_text"
                    android:layout_gravity="center_vertical|left"
                    android:hint="@string/c0124_accounts_keys_overall_text_hints"
                    android:layout_weight="0.97"
                    android:gravity="center_vertical|center_horizontal" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c0124_accounts_keys_recreate_keys_button"
                android:text="@string/c0124_accounts_keys_recreate_keys_button_title"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/c0124_accounts_keys_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/c0124_accounts_keys_list_is_expanding_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="10dp"
                android:layout_centerVertical="true"

                android:layout_alignParentLeft="true"

                android:focusable="false"
                android:src="@android:drawable/arrow_down_float"
                android:contentDescription="@string/not_available_text"
                />

            <TextView
                android:id="@+id/c0124_accounts_keys_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:paddingLeft="15dp"

                android:layout_centerVertical="true"

                android:layout_toRightOf="@id/c0124_accounts_keys_list_is_expanding_indicator"

                android:focusable="false"
                android:text="@string/c0124_string_accounts_keys"
                style="@android:style/TextAppearance.Large"/>
        </RelativeLayout>

        <View
            android:id="@+id/c0124_accounts_keys_list_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <ListView
            android:id="@+id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    </LinearLayout>



</FrameLayout>

<!--
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
-->
